update index.html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nothing</title>
+    <title>lesson2</title>
 </head>
 <body>
+    <div>
+       <form >
+          <div>
+             <input type="text" id="name" required placeholder="სახელი">
+             <label for="name">სახელი</label>
+          </div>
+          <div>
+            <input type="text" id="surname" required placeholder="გვარი">
+            <label for="surname">გვარი</label>
+          </div>
+          <div>
+            <input type="tel" id="phone" required pattern="\d+" placeholder="ტელეფონის ნომერი">
+            <label for="tel">ტელეფონის ნომერი</label>
+          </div>
+          <div>
+            <input type="date" id="date" required>
+            <label for="date">დაბადების თარიღი</label>
+          </div>
+          <div>
+            <input type="password" id="password" required placeholder="პაროლი">
+            <label for="password">პაროლი</label>
+          </div>
+          <div>
+            <input type="password" id="password" required placeholder="გაიმეორე პაროლი">
+            <label for="password">გაიმეორე პაროლი</label>
+          </div>
+          <div>
+            <input type="submit" id="register" required>
+          </div>
+       </form>
+    </div>
     
 </body>
 </html>
