update index.html file

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <label for="date">დაბადების თარიღი</label>
           </div>
           <div>
-            <input type="password" id="password" required placeholder="პაროლი">
+            <input type="password" id="password" minlength="8" required placeholder="პაროლი">
             <label for="password">პაროლი</label>
           </div>
           <div>
-            <input type="password" id="password" required placeholder="გაიმეორე პაროლი">
+            <input type="password" id="password" minlength="8" required placeholder="გაიმეორე პაროლი">
             <label for="password">გაიმეორე პაროლი</label>
           </div>
           <div>
-            <input type="submit" id="register" required>
+          <button type="submit">რეგისტრაცია</button>
           </div>
        </form>
     </div>
